--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <h2>Product Hunt</h2>
         </div>
         <div class="account">
-            <a href="#SignUp" class="btn">Sign Up</a>
+            <a href="./signUp.html" class="btn">Sign Up</a>
             <a href="#LogIn" class="btn">Log In</a>
         </div>
         <nav class="timing">
