changes in background colors

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
             <h2>Product Hunt</h2>
         </div>
         <div class="account">
-            <a href="./signUp.html" class="btn">Sign Up</a>
-            <a href="#LogIn" class="btn">Log In</a>
+            <a href="./signup/signUp.html" class="btn">Sign Up</a>
+            <a href="./login/LogIn.html" class="btn"id="loginbtn">Log In</a>
         </div>
         <nav class="timing">
             <a href="#groceries" class="active">Groceries</a>
